ui fixes and added logos

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The leading NFT Marketplace on Conflux eSpace.Home to the next generation of digital creators.Discover the best NFT collections."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="stylesheet" href="/css/bootstrap.css" />
@@ -85,7 +85,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Conflux Marketplace</title>
+    <title>OpenFlux</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
